--- a/Aviation Dictionary (HTML, CSS, JS)/index.html
+++ b/Aviation Dictionary (HTML, CSS, JS)/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>Aviation Dictionary - Home</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
     <script src="script.js"></script>
 </head>
 
@@ -14,26 +17,26 @@
     </header>
 
     <nav>
-        <ul class="topnav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="history-of-flight.html">History Of Flight</a></li>
-            <li><a href="light-aircraft.html">Light Aircraft</a></li>
-            <li><a href="commercial-aviation.html">Commercial Aviation</a></li>
-            <li><a href="military-aviation.html">Military Aviation</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
+        <div class="topnav">
+            <a href="index.html">Home</a>
+            <a href="history-of-flight.html">History Of Flight</a>
+            <a href="light-aircraft.html">Light Aircraft</a>
+            <a href="commercial-aviation.html">Commercial Aviation</a>
+            <a href="military-aviation.html">Military Aviation</a>
+            <a href="gallery.html">Gallery</a>
         </ul>
     </nav>
 
     <main>
         <div class="main-content">
         <h2>Home</h2>
-        <div id="home-page-img">
+        <div class="top-page-img">
             <img alt="A Royal Air Force Hawk T2 at Prestwick Airport in Scotland" src="images/IMGP5656.JPG">
             <p>A Royal Air Force Hawk T2 at Prestwick Airport in Scotland - Image Credit: Lee Gallagher</p>
         </div>
         <p>Hello, and welcome to Aviation Dictionary.</p>
-        <p>I've created this website in order to showcase my great interest in the subject of aviation, and I'm hoping its something that I can add to over time.</p>
-        <p>In this website, I'll be covering many topics, such as:</p>
+        <p>I've created this website in order to showcase my great interest in the subject of aviation, and I'm hoping its something that I can add to over time. It'll be an ongoing project as I am currently a Level 6 NC Computer Science student at Ayrshire College in Kilwinning, Scotland. I hope to one day have a career as a web or software developer, as I love the process of programming and developing things that people hopefully find interesting and useful.</p>
+        <p>In this website, I'll be covering many topics in the subject of aviation that I have a strong interest in, such as:</p>
         <ul>
             <li>The History of Aviation - from the first flights to the modern day</li>
             <li>Light Aircraft - gliders, microlights, light aircraft and amateur-built aircraft types</li>
