--- a/Aviation Dictionary (HTML, CSS, JS)/history-of-flight.html
+++ b/Aviation Dictionary (HTML, CSS, JS)/history-of-flight.html
@@ -24,13 +24,15 @@
             <a href="commercial-aviation.html">Commercial Aviation</a>
             <a href="military-aviation.html">Military Aviation</a>
             <a href="gallery.html">Gallery</a>
-        </ul>
+        </div>
     </nav>
 
     <main>
         <div class="main-content">
         <h2>The History of Flight</h2>
         <p>The dream of flying in the air like a bird has been a dream of humanity from the dawn of time. The use of kites can be traced back to several hundred years B.C., and visionaries such as Leonardo da Vinci have been shown to have had ideas for powered flight as early as the 15th century.</p>
+        <p>Balloon flight was experimented with in the late 1700s, with the oldest currently surviving manned aircraft, the L'Intrépide, dating back to 1795. The latter half of the 1800s gave rise to the first glider aircraft, with one of the biggest pioneers of those being Otto Lilienthal, who invented some of the first examples of the hang-glider.</p>
+        <p>In 1903 however, powered flight was born, when the brothers Orville and Wilbur Wright built and flew the first powered aeroplane, the Kitty Hawk, at the Kill Devil Hills in North Carolina, followed by a number of other designs in the following years.</p>
         </div>
     </main>
 
@@ -40,5 +42,6 @@
         </div>
     </footer>
 </body>
+
 
 </html>
