--- a/Aviation Dictionary (HTML, CSS, JS)/history-of-flight.html
+++ b/Aviation Dictionary (HTML, CSS, JS)/history-of-flight.html
@@ -30,9 +30,29 @@
     <main>
         <div class="main-content">
         <h2>The History of Flight</h2>
+        <div class="top-page-img">
+            <img alt="An old photograph of a Bleriot monoplane design in flight, circa 1910" src="images/1910_Bleriot_monoplane.png">
+            <p>An old photograph of a Bleriot monoplane design in flight, circa 1910 - Image Credit: Unknown Author</p>
+        </div>
+        <h4>THE FIRST PIONEERS</h4>
         <p>The dream of flying in the air like a bird has been a dream of humanity from the dawn of time. The use of kites can be traced back to several hundred years B.C., and visionaries such as Leonardo da Vinci have been shown to have had ideas for powered flight as early as the 15th century.</p>
         <p>Balloon flight was experimented with in the late 1700s, with the oldest currently surviving manned aircraft, the L'Intrépide, dating back to 1795. The latter half of the 1800s gave rise to the first glider aircraft, with one of the biggest pioneers of those being Otto Lilienthal, who invented some of the first examples of the hang-glider.</p>
         <p>In 1903 however, powered flight was born, when the brothers Orville and Wilbur Wright built and flew the first powered aeroplane, the Kitty Hawk, at the Kill Devil Hills in North Carolina, followed by a number of other designs in the following years.</p>
+        <p>Interest in flight grew across the Atlantic in Europe as well, and in 1909 a French pioneer, Louis Bleriot, built the Bleriot XI monoplane and carried out the first flight across the English Channel, flying from Les Barraques near Calais to a landing site near Dover Castle. The flight only took 37 minutes but proved that aviation was something to be taken seriously as a method of transportation in a way it wasn't before. The Bleriot design was also the first example of the conventional control layout of an aeroplane, with a single control stick controlling pitch and roll and foot pedals controlling yaw. This method of control system forms the basis of flight control systems to this day.</p>
+        <h4>THE DEBUT OF AIRCRAFT IN WAR</h4>
+        <div class="content-img">
+            <img alt="A modern photo of a Royal Aircraft Factory B.E.2, one of the first military aircraft which entered British service in 1912" src="images/1200px-Royal_Aircraft_Factory_BE2_(14204640257).jpg">
+            <p>A modern photo of a Royal Aircraft Factory B.E.2, one of the first military aircraft which entered British service in 1912 - Image Credit: Tony Hisgett (used under <a href="https://creativecommons.org/licenses/by/2.0/deed.en">Creative Commons Licence</a>)</p>
+        </div>
+        <p>In 1914, war breaks out in Europe, leading to battles that were unparalleled in scope and scale at that time. World War 1, optimistically referred to at the time as "the war to end all wars" or "the Great War" brought to the forefront a number of new weapons technologies - machine guns, modern artillery and the first tanks.</p>
+        <p>However, it also saw the first major use of the aeroplane in warfare. In a short few years, many aeroplane designs were built that surpassed the capabilities of anything else built thus far, and most of these designs were of a biplane or triplane configuration - although there were a couple of notable monoplane designs also.</p>
+        <p>In the beginning, aircraft were used in a purely recon capacity. This new technology was initially met with some deal of skepticism from some military leaders, who didn't see a future for aeroplanes in warfare. However, as these recon flights grew, pilots from either side would occasionally meet each other in the skies above the battlefield. Sometimes these encounters would be quite friendly, but sometimes pilots would decide to try and take each other on in whatever way they could, throwing objects at each other's aircraft as well as firing pistols and rifles at each other.</p>
+        <p>As these flights increased in number, it was decided that the time had come to create a purpose-built combat aircraft, by fixing a forward-firing machine gun that the pilot could use to fire at other aircraft. Thus, the fighter aircraft was born.</p>
+        <p>A lot of these fighters were single-seaters, however there were also two-seat designs that would often have a pilot and an observer, who would usually be equipped with a turretted machine gun. Sometimes these observers would throw grenades and other handheld explosives down onto enemy trenches below, eventually leading to the first dedicated bomber aircraft.</p>
+        <p>By 1918 and the war's end, it was clear that aviation was here to stay.</p>
+        <h4>CONQUERING THE ATLANTIC</h4>
+        <p>After the war was over, there was a renewed focus on using the aeroplane as a method of civil transport. Given a boost by technological progress made during the war, the next challenge was making aviation a truly global form of transport.</p>
+        <p>In 1909, flying an aeroplane across the English Channel was an impressive achievement, but a mere 10 years later, in 1919, history was made again when John Alcock and Arthur Brown, two British aviators who were both veterans of the Great War, made the first non-stop flight across the Atlantic Ocean in a twin-engined Vickers Vimy, flying from Newfoundland to County Galway in Ireland.</p>
         </div>
     </main>
 
