--- a/Aviation Dictionary (HTML, CSS, JS)/military-aviation.html
+++ b/Aviation Dictionary (HTML, CSS, JS)/military-aviation.html
@@ -24,12 +24,30 @@
             <a href="commercial-aviation.html">Commercial Aviation</a>
             <a href="military-aviation.html">Military Aviation</a>
             <a href="gallery.html">Gallery</a>
-        </ul>
+        </div>
     </nav>
 
     <main>
         <div class="main-content">
         <h2>Military Aviation</h2>
+        <div class="top-page-img">
+            <img alt="An F-22 Raptor, a modern '5th-gen' fighter aircraft operated by the US Air Force - Image Credit: United States Air Force" src="images/F-22_Raptor_edit1.jpg">
+            <p>An F-22 Raptor, a modern '5th-gen' fighter aircraft operated by the US Air Force - Image Credit: United States Air Force</p>
+        </div>
+        <h4>AIRCRAFT IN WAR</h4>
+        <p>As is discussed more extensively in the "History Of Flight" page, the use of aeroplanes in war was explored almost as soon as the technology arrived. Despite some initial doubts about their uses, less than 10 years after the Wright Brothers took their first flight in 1903, planes were being used in warfare for the first time.</p>
+        <p>In this page, we'll be discussing the different types of military aircraft out there and their roles, both in history and on the modern battlefield.</p>
+        <h4>FIGHTER AIRCRAFT</h4>
+        <p>A mainstay of air forces from (almost) the very beginning, fighters are aircraft designed primarily for air-to-air combat - which is to say that their primary role is shooting down other aircraft. Fighter aircraft can trace their origins back to WW1, where the initial use of aeroplanes as recon platforms gave way to pilots wishing to deny the enemy an intelligence advantage, by putting machine guns on their aircraft and going after the recon planes. Thus an arms race began, with each side continually trying to gain the upper hand in aircraft technology and leading to the first aerial dogfights.</p>
+        <p>In WW2, the roles of fighter aircraft expanded. As bombers became a bigger part of the fight, some fighter designs emphasised long-range endurance and turning capability, allowing them to escort bomber aircraft, whereas some fighters emphasised speed and climbing ability in order to shoot down incoming bombers in an interception role. The concepts of the heavy fighter and night fighter were also explored, with some heavier fighters carrying the first aircraft radars, making them suitable for night-time interception. At the latest stages of the war, jet propulsion was also beginning to make itself known.</p>
+        <p>During the Cold War, the age of the jet aircraft was here and fighters became much faster, first breaking the sound barrier and then breaking it twice - even in the 1950s some fighter designs were already capable of flying at Mach 2. The weaponry also changed, with air-to-air missiles beginning to take a larger role as a fighter's primary weapon. Most fighters would also see themselves fitted with radar as well. Once again, some fighters specialised in being more multi-role platforms whereas others emphasised pure speed and altitude as interceptor aircraft.</p>
+        <p>As the Cold War came to a close and into the modern day, stealth technology emerged as a game-changer, first in experimental types but now featured in a number of "5th-gen" fighters operated by the US, Russia and China.</p>
+        <h4>BOMBER AIRCRAFT</h4>
+        <p>Bomber aircraft also emerged in WW1, and the first heavy bombers were built during this war.</p>
+        <p>however their first major use was during WW2 and the use of heavy bombers was a major component of multiple battles during that war. Alongside escorting fighters, they often flew in massed formations in missions that were devestating both to those on the ground and in the air - being part of a bomber crew was among the most dangerous roles of the conflict. There were also other types of lighter bomber aircraft as well, such as dive bombers and torpedo bombers.</p>
+        <p>As WW2 came to a close and the Iron Curtain emerged, the use of bombers remained a top strategic topic for the major air forces of the world. As ballistic missiles were in their infancy immediately following WW2, the heavy bomber remained for a time the only platform for which to deliver nuclear weapons onto a target, and so a great deal of attention continued to be put into maintaining large fleets of them.</p>
+        <p>However, a great deal of research was put into how to make bombs a more precise weapon. During WW2, it took a whole fleet of heavy bombers dropping their bombs on a specific area ("carpet bombing") to have a chance at taking out a desired target, and even then complete misses were not uncommon. Thus, by the time of the Vietnam War, the first precision laser and GPS guided bombs began to emerge. A smaller, nimbler aircraft could now carry one or two bombs and accurately strike a target that it once took a whole fleet of heavy bombers to destroy.</p>
+        <p>This, along with the emergence of ICBMs, has meant that heavy bombers are now largely a thing of the past, with the dedicated bomber plaforms that do exist now typically being much smaller and faster. The major nations of the US, Russia and China still maintain small fleets of heavy bombers as part of their nuclear triad.</p>
         </div>
     </main>
 
