Added image and theme button to "Commercial Aviation" page
Added an image to the "Commercial Aviation" page as well as a theme button - currently not functional, but a feature I will be adding to all of the pages over time.

--- a/Aviation Dictionary (HTML, CSS, JS)/commercial-aviation.html
+++ b/Aviation Dictionary (HTML, CSS, JS)/commercial-aviation.html
@@ -13,6 +13,7 @@
 <body>
     <header>
         <h1>AVIATION DICTIONARY</h1>
+        <button class="theme-button">Theme</button>
         <h3>Aviation history, facts, stories and information</h3>
     </header>
 
@@ -30,11 +31,15 @@
     <main>
         <div class="main-content">
         <h2>Commercial Aviation</h2>
+        <div class="top-page-img">
+            <img alt="An Emirates Airbus A380, currently the largest commercial airliner ever built - Image Credit: Julian Herzog" src="images/Emirates_Airbus_A380-861_A6-EER_MUC_2015_01.jpg">
+            <p>An Emirates Airbus A380, currently the largest commercial airliner ever built - Image Credit: Julian Herzog</p>
+        </div>
         <h4>THE EARLY DREAMS</h4>
         <p>There is a fairly romantic view told of aviation history - a history where the quest for the skies was motivated by pure wonder and a thirst for seeing the world from above. To some extent, this was certainly true, as powered flight, as we've discussed in some other areas, was a dream of mankind for many centuries, perhaps even millenia.</p>
         <p>However, when looking back at the big moments of human history, be they a new invention or the exploration of a new, distant land, there are two things that motivate us more than anything else - gold and glory.</p>
         <p>In other pages, we've focused squarely on the "glory" part of this equation. However, whilst the dream of flight itself was one of a quest for glory, we now must discuss how aviation was also a quest for gold.</p>
-        <p>PASSENGER AIRCRAFT</p>
+        <h4>PASSENGER AIRCRAFT</h4>
         <p>In all likelihood the most common interaction that most people have with aviation in the modern day, the largest use of commercial aircraft are for the purposes of air travel, flying people to and from different countries, continents and across oceans. The modern airliner has offered people a way to travel around the world in less than a day - a journey that previously would have taken weeks or even months via ship.</p>
         <p>Modern airliners are a diverse collection of different types, shapes and sizes. Small short-haul airliners typically still use propellers, often in a turboprop configuration, and may only feature a few dozen seats (the Britten-Norman Islander and the de Havilland DHC-6 Twin Otter are two of the smallest examples). On the other end of the scale, there are large, four-engined long-haul airliners such as the Airbus A380 and the Boeing 747 (although there are only a few of the latter still in passenger-carrying service). In the middle, there are a collection of wide-body twin-engined types for long-haul flights, such as the Airbus A350, as well as regional, short-haul jets such as the Boeing 737 and Airbus A320.</p>
         <p>The most well-known passenger aircraft manufacturers are Boeing and Airbus, with some lesser-known manufacturers such as Embraer and ATR making up the remainder. The Chinese company Comac are an up-and-coming player in the passenger aircraft space as well.</p>
