Added a little to the "commercial aviation" page
Added some parts to the commercial page. Going to start focusing on this website more by refactoring the navigation menu to look a bit better.

--- a/Aviation Dictionary (HTML, CSS, JS)/commercial-aviation.html
+++ b/Aviation Dictionary (HTML, CSS, JS)/commercial-aviation.html
@@ -43,6 +43,13 @@
         <p>In all likelihood the most common interaction that most people have with aviation in the modern day, the largest use of commercial aircraft are for the purposes of air travel, flying people to and from different countries, continents and across oceans. The modern airliner has offered people a way to travel around the world in less than a day - a journey that previously would have taken weeks or even months via ship.</p>
         <p>Modern airliners are a diverse collection of different types, shapes and sizes. Small short-haul airliners typically still use propellers, often in a turboprop configuration, and may only feature a few dozen seats (the Britten-Norman Islander and the de Havilland DHC-6 Twin Otter are two of the smallest examples). On the other end of the scale, there are large, four-engined long-haul airliners such as the Airbus A380 and the Boeing 747 (although there are only a few of the latter still in passenger-carrying service). In the middle, there are a collection of wide-body twin-engined types for long-haul flights, such as the Airbus A350, as well as regional, short-haul jets such as the Boeing 737 and Airbus A320.</p>
         <p>The most well-known passenger aircraft manufacturers are Boeing and Airbus, with some lesser-known manufacturers such as Embraer and ATR making up the remainder. The Chinese company Comac are an up-and-coming player in the passenger aircraft space as well.</p>
+        <h4>CARGO AIRCRAFT</h4>
+        <p>The transportation of heavy cargo, to this day, is undoubtably dominated by ships and the sea. However, for lighter cargo, or for cargo where time is of the essence, the use of aircraft for cargo transport is another major commercial use of aviation.</p>
+        <p>Indeed, one of the first uses of even lighter aircraft was that of air mail delivery. This allowed rural areas access to postal services - many for the very first time. Aircraft in a cargo role can also deliver time-critical items such as life-saving medicines and treatments as well as organ transplants.</p>
+        <p>The most well-known cargo transport aircraft are modified derivatives of their passenger-carrying counterparts, such as the Boeing 747. There are a few types made specifically for cargo transport, such as the Airbus Beluga.</p>
+        <h4>SUPERSONIC TRANSPORT (SSTs)</h4>
+        <p>An unusual footnote in the commercial aviation story, which exists in the past and carries hopes for the future and yet is completely non-existent in the present, is that of the supersonic passenger aircraft, commonly known as "supersonic transports" or SSTs.</p>
+        <p>Only two supersonic airliner types have ever been built as of 2025, with the first of these being the Tupolev Tu-144, a Soviet design. However, whilst this technically won the title of "first", the much more well-known design was of course the Concorde, built as part of a British-French collaboration.</p>
         </div>
     </main>
 
@@ -54,3 +61,4 @@
 </body>
 
 </html>
+
