Added a little bit to military aviation page
Added sections about military helicopters and tanker aircraft to military page. Will likely continue to add to later.

--- a/Aviation Dictionary (HTML, CSS, JS)/military-aviation.html
+++ b/Aviation Dictionary (HTML, CSS, JS)/military-aviation.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Aviation Dictionary - Home</title>
+    <title>Aviation Dictionary - Military Aviation</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,6 +13,7 @@
 <body>
     <header>
         <h1>AVIATION DICTIONARY</h1>
+        <button class="theme-button">Theme</button>
         <h3>Aviation history, facts, stories and information</h3>
     </header>
 
@@ -48,6 +49,13 @@
         <p>As WW2 came to a close and the Iron Curtain emerged, the use of bombers remained a top strategic topic for the major air forces of the world. As ballistic missiles were in their infancy immediately following WW2, the heavy bomber remained for a time the only platform for which to deliver nuclear weapons onto a target, and so a great deal of attention continued to be put into maintaining large fleets of them.</p>
         <p>However, a great deal of research was put into how to make bombs a more precise weapon. During WW2, it took a whole fleet of heavy bombers dropping their bombs on a specific area ("carpet bombing") to have a chance at taking out a desired target, and even then complete misses were not uncommon. Thus, by the time of the Vietnam War, the first precision laser and GPS guided bombs began to emerge. A smaller, nimbler aircraft could now carry one or two bombs and accurately strike a target that it once took a whole fleet of heavy bombers to destroy.</p>
         <p>This, along with the emergence of ICBMs, has meant that heavy bombers are now largely a thing of the past, with the dedicated bomber plaforms that do exist now typically being much smaller and faster. The major nations of the US, Russia and China still maintain small fleets of heavy bombers as part of their nuclear triad.</p>
+        <h4>MILITARY HELICOPTERS</h4>
+        <p>The operational history of helicopters can be traced back to WW2, with the first mass-produced helicopter being the Sikorsky R-4, a two-seat design used by the US and UK militaries during the war. Initially, helicopters were mainly used in a medivac role, rescuing wounded troops from the battlefield and transporting them back behind the lines for treatment.</p>
+        <p>During the Korean War a few years later, helicopters such as the Bell H-13 Sioux and the Bell 47 continued to serve in a medivac role but also performed more of a battlefield recon role as well. However, the first war where helicopters played a major part was the Vietnam War, with the US introducing the concept of "Air Cavalry" - troop regiments that would ride into battle not on horseback, but by helicopter. This war also saw the introduction of the attack helicopter as a concept with designs such as the AH-1 Cobra.</p>
+        <p>In the modern day, helicopters play much the same role as they did then, but much more cautiously due to the prevalence of modern surface-to-air missile systems. The Russia-Ukraine War has also shown armed helicopters to be a capable (and relatively low-cost) counter-drone platform - a helicopter with a capable door gunner can shoot down a slow-moving drone much cheaper than even a small SAM.</p>
+        <h4>TANKER AIRCRAFT</h4>
+        <p>Military air-to-air refuelling aircraft, or tankers, are used to refuel fast jets and other aircraft mid-air during their missions, for the purposes of extending their operational range. These planes are typically modified derivatives of civilian airliners (such as the RAF Voyager, which is a modified Airbus A330).</p>
+        <p>These aircraft are vital for allowing other military aircraft to fly their missions without necessarily needing to have friendly assets, such as aircraft carrier or ground airbases, nearby.</p>
         </div>
     </main>
 
@@ -59,3 +67,4 @@
 </body>
 
 </html>
+
