--- a/Aviation Dictionary (HTML, CSS, JS)/light-aircraft.html
+++ b/Aviation Dictionary (HTML, CSS, JS)/light-aircraft.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Aviation Dictionary - Home</title>
+    <title>Aviation Dictionary - Light Aircraft</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,6 +13,7 @@
 <body>
     <header>
         <h1>AVIATION DICTIONARY</h1>
+        <button class="theme-button">Theme</button>
         <h3>Aviation history, facts, stories and information</h3>
     </header>
 
@@ -24,7 +25,7 @@
             <a href="commercial-aviation.html">Commercial Aviation</a>
             <a href="military-aviation.html">Military Aviation</a>
             <a href="gallery.html">Gallery</a>
-        </ul>
+        </div>
     </nav>
 
     <main>
@@ -45,6 +46,13 @@
         <p>For recreational flyers looking for more excitement and aspiring military pilots, some light aircraft types are specifically built for performing stunts known as aerobatics. Anyone who has seen some of these types perform at an air show will have an idea of how impressive some of these types of aircraft can be and the kinds of stunts they can pull off.</p>
         <p>A lot of aerobatic light aircraft are of the tail-dragger configuration mentioned earlier, and are often built from very carefully crafted carbon fibre. Some examples of these types include the Extra 200 & 300, the Zivko Edge 540 and the GB1 Gamebird. These aircraft can fly at around 200 knots and call pull g-forces of up to +/- 10g (ten times the force of gravity) or even more in some instances. To put that into perspective, someone who is 80kg would feel like they weighed 800kg if they were pulling +10g.</p>
         <p>These aircraft typically feature 1-2 seats, often having variants of each within the same type, and are a popular choice for aerobatic teams and display pilots at air shows.</p>
+        <h4>MICROLIGHTS</h4>
+        <p>Otherwise known as Light Sport Aircraft or ultralights in other parts of the world, in the UK, microlight aircraft are 1-2 seat aircraft that are extremely light, with the original criteria for a UK microlight being an aircraft weighing 450kg maximum take-off weight (MTOW) or less, although this has recently been increased to 600kg.</p>
+        <p>Microlight aircraft can trace their origins back to hang gliders, with some inventive hang glider pilots deciding that adding a tiny propeller engine to the back of a hang glider would greatly increase their capacity for longer and further flights. This quickly morphed into the first "flex-wing" microlights - an aircraft that utilised the hang glder wing but also had a pod with the cockpit and engine. The pilot would control the microlight by means of a bar that stretched abeam of the aircraft.</p>
+        <p>Flex-wing microlights were popular for a long time and are still flown by many pilots, however in modern times fixed-wing microlight designs have emerged as well. The first of these actually emerged not too long after the first flex-wings, however they were still very experimental machines. In the modern day however, fixed-wing microlights are almost indistinguishable from conventional light aircraft, often providing a similar performance for a lower cost than an ordinary light aircraft.</p>
+        <h4>GLIDERS</h4>
+        <p>Gliders (or sailplanes as they are known in some parts of the world) are light aircraft that fly using natural sources of lift without the use of an engine or other means of propulsion. They are distinctly recognisable by their long and often quite thin wings, allowing them to take maximum advantage of sources of lift such as ridge lift, thermals and mountain wave.</p>
+        <p>There are two common ways of getting a glider into the air. The most common method in the UK is the winch launch, where the glider is launched into the air by a long cable that is reeled in quickly, allowing the glider to very quickly accelerate and shoot skywards. In the US, the most common way of getting a glider into the air is to use a powered light aircraft as a "tow-plane", where it tows the glider behind it with a cable. Other methods such as hill launch, bungee launch and even foot launch for some very light types also exist, but are much less common.</p>
         </div>
     </main>
 
