Added to the military aviation page
Added sections for transport and reconnaissance aircraft, detailing their roles and examples.

--- a/Aviation Dictionary (HTML, CSS, JS)/military-aviation.html
+++ b/Aviation Dictionary (HTML, CSS, JS)/military-aviation.html
@@ -56,6 +56,14 @@
         <h4>TANKER AIRCRAFT</h4>
         <p>Military air-to-air refuelling aircraft, or tankers, are used to refuel fast jets and other aircraft mid-air during their missions, for the purposes of extending their operational range. These planes are typically modified derivatives of civilian airliners (such as the RAF Voyager, which is a modified Airbus A330).</p>
         <p>These aircraft are vital for allowing other military aircraft to fly their missions without necessarily needing to have friendly assets, such as aircraft carrier or ground airbases, nearby.</p>
+        <h4>TRANSPORT AIRCRAFT</h4>
+        <p>Heavy lift transport aircraft such as the C-130 and C-17 are used by military forces to carry troops and heavy equipment to bases and battlefield locations both during peacetime and in wartime. Some of these types still utilise propellers (typically turboprops) as propeller engines are actually better for shorter take-offs and landings than jets.</p>
+        <p>These aircraft come in all sizes, from small aircraft such as the C-27, to extremely large types such as the C-5 Galaxy. These types also often feature a number of variants for carrying out other missions beyond transport - the C-130 for example has tanker, airborne surveillance, paratrooper and even close-air-support gunship variants.</p>
+        <h4>RECONNAISSANCE AIRCRAFT</h4>
+        <p>The category of reconnaissance aircraft is a large one and in itself can be broken down into a number of types.</p>
+        <p>AWACS - Airborne Warning and Control System - aircraft designed to function as an airborne surveillance platform and also as a command and control asset. Featuring types such as the Boeing E-3 Sentry and E-7 Wedgetail, these are large aircraft that carry very powerful radars and signals intelligence equipment, capable of monitoring air, sea and land for enemy threats. These aircraft will work in conjunction with other more frontline combat aircraft to take on the enemy during wartime.</p>
+        <p>Reconnaissance Drones - unmanned aircraft have become a common part of aerial reconnaissance for many militaries. These are typically quite slow-flying, sometimes coming in the form of a quadcopter drone to at their largest being slightly larger than a light propeller aircraft. These offer the advantages of being able to stay in the air for longer than manned aircraft as well as being able to operate in higher-risk areas and missions where aircraft loss is a likely possibility.</p>
+        <p>Spyplanes - perhaps the purest definition of a recon aircraft, these planes operate at very high altitudes, typically 70,000-90,000 feet. These aircraft are very expensive to operate and so only large powers such as the US and the Soviet Union operate them. The most famous current example is the Lockheed U-2, a jet-powered aircraft that resembles a very large glider and can operate at up to 70,000 feet. The most famous retired example, and one of the most high-performance aircraft of all time, was the SR-71 Blackbird, a spyplane that was actually designed to counter the SAM threat that befell a couple of U-2 spyplanes. The SR-71 could fly at over three times the speed of sound (Mach 3) and operate at an altitude of 85,000-90,000 feet.</p>
         </div>
     </main>
 
@@ -67,4 +75,3 @@
 </body>
 
 </html>
-
